# agent-repo-standard

./: .gitignore  AGENTS.md  INSTALL.md  Makefile  README.md  components.yaml  copier.yml  package-lock.json  package.json  tsconfig.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: eval.yml  validate.yml
agents/tiered-hermes/: AGENTS.md  README.md  pyproject.toml
agents/tiered-hermes/tests/: conftest.py  test_hindsight_adapter.py  test_install.py  test_l2_probe.py  test_optional_tier_config.py  test_tiered_provider.py
agents/tiered-hermes/tiered_hermes/: __init__.py  install.py  l2_probe.py  plugin.yaml  router.py  tools.py
agents/tiered-hermes/tiered_hermes/adapters/: __init__.py  base.py  hindsight_l2.py  mcp_l3.py  mnemosyne_l1.py  wiki_l4.py
config/: README.md
config/claude/: settings.json
config/doctrine/: doctrine.md
config/kb/: kb.yml
config/mcp/: .mcp.json
config/model-routing/: model-routing.json
config/pi/: config.json
config/statusline/: ccstatusline.json
data/: index.json
data/runs/: 2026-07-17-agent-eval-self-v1.json  2026-07-17-agent-tool-source-batch-fresh.json  2026-07-17-klaussy-fresh-codex.json  2026-07-17-superpowers-fresh-codex.json
docs/: 2026-07-23-thin-agent-kit-direction.md  2026-07-23-thin-agent-kit-implementation-plan.md  2026-07-24-amanar-rebuild-plan.md  2026-07-24-next-session-handoff.md  README.md  architecture.md  config.md  eval.md  migrating-from-legacy-fixed.md  platform-specs.md  skills.md
docs/legacy/: harness-README.md  workflow-AGENTS.md
docs/reference/: product-spec.md
harness/: AGENTS.md  README.md
harness/backpressure/: AGENTS.md  install.py  pre-commit
harness/claude/: AGENTS.md  README.md  package-lock.json  package.json  tsconfig.json
hooks/: hooks.json
knowledge/: AGENTS.md  README.md  kb.py  package-lock.json  package.json  tsconfig.json
pi/: bootstrap.ts  controllerTools.ts  extension.ts  pi.d.ts
scripts/: agent-eval.mjs  check-skill-consistency.mjs
src/: capabilities.ts  classify.ts  evaluator.ts  inject.ts  kernelVerbs.ts  nativeTools.ts  routing.ts  weakModel.ts
src/cli/: main.ts
storage/synology-mcp/: AGENTS.md  README.md  pyproject.toml  synology_mcp_server.py
storage/synology-mcp/tests/: test_storage_requests.py
tasks/: plan.md  todo.md
template/: .gitattributes.jinja  .gitignore.jinja  AGENTS.md.jinja  CODEOWNERS.jinja  CONSTITUTION.md.jinja  CONTRIBUTING.md.jinja  README.md.jinja  REPO-STANDARD.md  {% if repo_type in ["code", "library"] %}pyproject.toml{% endif %}.jinja
tests/: agent-eval.test.mjs  requirements-ci.txt  validate-components.py  validate-toolkit.py  verify-template.sh
web/: template.html
workflow/: README.md  hosts.py
(+309 files in other folders)
