[project]
name = "amanar-synology-mcp"
version = "0.1.0"
description = "Portable read-only Synology DSM MCP integration"
requires-python = ">=3.11,<3.14"
dependencies = [
  "mcp>=1.9,<2",
  "requests>=2.31,<3",
  "synology-api @ git+https://github.com/N4S4/synology-api.git@d62ec6ae4dfe0237068a4a21806b7529dd60c579",
]

[tool.uv]
package = false
